# intel_sys_trial_project

./: .clang-format  .gitignore
project_root/: CMakeLists.txt  package.xml
project_root/launch/: project_root_launch.py
project_root/src/: goal_publisher.cpp  map_publisher.cpp  path_publisher.cpp  point_publisher.cpp  start_publisher.cpp
